upload backup custom template

--- a/template_bkp.conf
+++ b/template_bkp.conf
@@ -28,31 +28,15 @@
       "name" : "work",
       "base" : "video",
       "fields" : [
-        {
-           "name" : "fourimages",
-           "title" : "4 supporting images",
-          "type" : "gallery"
-         },
+        // {
+        //   "name" : "fourimages",
+        //   "title" : "4 supporting images",
+        //   "type" : "gallery"
+        // },
         {
           "name" : "logo",
           "title" : "Client logo",
           "type" : "image"
-        },
-        {
-          "name" : "thumb_img",
-          "title" : "Thumbnail",
-          "type" : "image"
-        }
-      ]
-    },
-    {
-      "title" : "Logo Header",
-      "name" : "logoheader",
-      "base" : "text",
-      "fields" : [{
-          "name" : "position",
-          "title" : "Sub title",
-          "type" : "text"
         }
       ]
     },
@@ -126,11 +110,6 @@
           "name" : "logo",
           "title" : "Logo",
           "type" : "image"
-        },
-        {
-          "name" : "auth_title",
-          "title" : "Title",
-          "type" : "text"
         }
       ]
     }
