add embedded video custom type

--- a/template.conf
+++ b/template.conf
@@ -131,6 +131,11 @@
           "name" : "auth_title",
           "title" : "Title",
           "type" : "text"
+        },
+        {
+          "name" : "embed_vid",
+          "title" : "Embedded Video",
+          "type" : "text"
         }
       ]
     }
